--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # use C-a, since it's on the home row and easier to hit than C-b
-set-option -g prefix C-a
-unbind-key C-a
-bind-key C-a send-prefix
+set-option -g prefix C-o
+unbind-key C-o
+bind-key C-o send-prefix
 set -g base-index 1
 
 # vi is good
@@ -67,6 +67,10 @@ set-option -g status-fg default
 set-option -g status-bg black
 set-option -g pane-active-border-fg black
 set-option -g pane-border-fg black
+
+# set default shell to be zsh
+set-option -g default-shell /bin/zsh
+#set -g default-command /bin/zsh
 
 # Status Bar solarized-light
 if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg white"
