--- a/tmux.conf
+++ b/tmux.conf
@@ -47,6 +47,7 @@ bind-key + select-layout main-horizontal
 bind-key = select-layout main-vertical
 set-window-option -g other-pane-height 25
 set-window-option -g other-pane-width 80
+set-window-option -g pane-base-index 1
 
 bind-key a last-pane
 bind-key q display-panes
@@ -76,7 +77,7 @@ set-option -g status-fg default
 
 # Status Bar solarized-dark (default)
 set-option -g status-bg black
-set-option -g pane-active-border-fg black
+set-option -g pane-active-border-fg blue
 set-option -g pane-border-fg black
 
 # set default shell to be zsh
