--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
-# use C-a, since it's on the home row and easier to hit than C-b
-set-option -g prefix C-o
-unbind-key C-o
-bind-key C-o send-prefix
+# use C-space
+set-option -g prefix C-Space
+unbind-key C-Space
+bind-key C-Space send-prefix
 set -g base-index 1
 
 # Easy config reload
