--- a/tmux.conf
+++ b/tmux.conf
@@ -56,6 +56,7 @@ bind-key c new-window
 bind-key t next-window
 bind-key T previous-window
 
+bind-key C-Space copy-mode
 bind-key [ copy-mode
 bind-key ] paste-buffer
 
