--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,9 @@ unbind-key C-Space
 bind-key C-Space send-prefix
 set -g base-index 1
 
+# fix ssh agent when tmux is detached
+setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
@@ -12,7 +15,7 @@ setw -g mode-keys vi
 
 # mouse behavior
 setw -g mode-mouse on
-set -g mouse-select-pane on
+set -g mouse-select-pane off
 set -g mouse-resize-pane on
 
 set-option -g default-terminal screen-256color
