add copy last line of output cmd

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,6 +49,10 @@ bind-key l select-pane -R
 #bind C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
 #bind C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
 #bind C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+#
+
+## copy last cmd's lastline of output
+bind y run "tmux copy-mode \; tmux send-keys up up V y"
 
 bind-key C-o rotate-window
 
